--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vakantierooster</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap">
-  <link rel="icon" href="">
+  <link rel="icon" href="icon.png">
   <style>
     body {
       font-family: 'Montserrat', sans-serif;
