--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <td class="hordijk">26</td>
         <td class="piesendorf">2</td>
         <td class="piesendorf">9</td>
-        <td>16</td>
+        <td class="piesendorf">16</td>
         <td class="hordijk">23</td>
         <td class="hordijk">30</td>
       </tr>
