--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <td>Maandag</td>
         <td class="zaltbommel">14</td>
         <td class="zaltbommel">21</td>
-        <td>28</td>
+        <td>28<br>Niks<br>Anke eten</td>
         <td class="piesendorf">4</td>
         <td class="piesendorf">11</td>
         <td>18</td>
@@ -113,7 +113,7 @@
         <td>Dinsdag</td>
         <td class="zaltbommel">15</td>
         <td class="zaltbommel">22</td>
-        <td>29</td>
+        <td class="hordijk">29</td>
         <td class="piesendorf">5</td>
         <td class="piesendorf">12</td>
         <td>19</td>
@@ -123,7 +123,7 @@
         <td>Woensdag</td>
         <td class="zaltbommel">16</td>
         <td class="zaltbommel">23</td>
-        <td>30</td>
+        <td class="hordijk">30</td>
         <td class="piesendorf">6</td>
         <td class="piesendorf">13</td>
         <td>20</td>
@@ -133,7 +133,7 @@
         <td>Donderdag</td>
         <td class="zaltbommel">17</td>
         <td class="zaltbommel">24</td>
-        <td>31</td>
+        <td class="hordijk">31</td>
         <td class="piesendorf">7</td>
         <td class="piesendorf">14</td>
         <td>21</td>
